<resources>
    <string name="app_name">bubankClone</string>
    <string name="hello_user">Olá, Roger</string>
    <string name="account_balance">Saldo em conta\nR$ 7.500,00</string>
    <string name="areapix">Àrea pix</string>
    <string name="Pay_bill">Pagar</string>
    <string name="convert_limit">Converter\nlimite</string>
    <string name="recharge">Recarga</string>
    <string name="my_cards">Meus cartões</string>
    <string name="secutity_lige">Segura de vida:\n Apartir de R$ 4,00/mês</string>
    <string name="credit_card">Cartão de crédito</string>
    <string name="current_invoice">Fatuta atual</string>
    <string name="invoice_value">R$ 3.000,00</string>
    <string name="Available_limit">Limite disponívél de R$ 80.000,00</string>
    <string name="balance">R$ 8.000,00</string>
    <string name="text_area_pix">Área Pix</string>
    <string name="text_input_area_pix">Digite tudo:chave Pix e valor</string>
    <string name="available_balance">R$ 1.000,00</string>
    <string name="separate_balance">R$ 3.0000,00</string>
    <string name="alright_accounts">Tudo certo com\nsuas contas?</string>
    <string name="payment_assistant">Ir para assistente de\npagamentos</string>
    <string name="text_full_investment">Total de investimentos</string>
    <string name="value_full_investment">R$ 5,00</string>
    <string name="investment_income">R$ 4.000,00</string>
    <string name="text_historic">Histórico</string>
    <string name="text_search">Buscar</string>
</resources>