<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingVertical="12dp">

    <!-- PIX -->
    <LinearLayout
        android:id="@+id/container_pix"
        android:layout_width="72dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <View
            android:id="@+id/img_view_area_pix"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:background="@drawable/ic_circle_gray" />

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginTop="-40dp"
            android:src="@drawable/ic_pix" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:text="@string/areapix"
            android:textColor="@color/text_primary"
            android:textSize="14sp"
            android:textStyle="bold" />

    </LinearLayout>

    <!-- PAYMENT -->
    <LinearLayout
        android:id="@+id/container_payment"
        android:layout_width="72dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintStart_toEndOf="@id/container_pix"
        app:layout_constraintTop_toTopOf="parent">

        <View
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:background="@drawable/ic_circle_gray" />

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginTop="-40dp"
            android:src="@drawable/ic_payments" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:gravity="center"
            android:text="@string/Pay_bill"
            android:textColor="@color/text_primary"
            android:textSize="14sp"
            android:textStyle="bold" />

    </LinearLayout>

    <!-- CONVERTER -->
    <LinearLayout
        android:id="@+id/container_converter"
        android:layout_width="72dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintStart_toEndOf="@id/container_payment"
        app:layout_constraintTop_toTopOf="parent">

        <View
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:background="@drawable/ic_circle_gray" />

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginTop="-40dp"
            android:src="@drawable/ic_convert_limit" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:gravity="center"
            android:text="@string/convert_limit"
            android:textColor="@color/text_primary"
            android:textSize="14sp"
            android:textStyle="bold" />

    </LinearLayout>

    <!-- RECHARGE -->
    <LinearLayout
        android:id="@+id/container_recharge"
        android:layout_width="72dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintStart_toEndOf="@id/container_converter"
        app:layout_constraintTop_toTopOf="parent">

        <View
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:background="@drawable/ic_circle_gray" />

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginTop="-40dp"
            android:src="@drawable/ic_recharge" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:gravity="center"
            android:text="@string/recharge"
            android:textColor="@color/text_primary"
            android:textSize="14sp"
            android:textStyle="bold" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>