<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#820AD1"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- HEADER -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/container_head"
            android:layout_width="match_parent"
            android:layout_height="180dp">

            <!-- USER -->
            <View
                android:id="@+id/img_view_user"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="48dp"
                android:background="@drawable/circle_icons_purple"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/img_user"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/ic_user"
                app:layout_constraintBottom_toBottomOf="@id/img_view_user"
                app:layout_constraintEnd_toEndOf="@id/img_view_user"
                app:layout_constraintStart_toStartOf="@id/img_view_user"
                app:layout_constraintTop_toTopOf="@id/img_view_user" />
            <!-- TEXT USER -->
            <TextView
                android:id="@+id/text_hello"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/hello_user"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/img_view_user" />

            <!-- VISIBILITY -->
            <View
                android:id="@+id/img_view_visibility"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="48dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/circle_icons_purple"
                app:layout_constraintEnd_toStartOf="@id/img_view_help"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/img_visibility"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/ic_visibility_show"
                app:layout_constraintBottom_toBottomOf="@id/img_view_visibility"
                app:layout_constraintEnd_toEndOf="@id/img_view_visibility"
                app:layout_constraintStart_toStartOf="@id/img_view_visibility"
                app:layout_constraintTop_toTopOf="@id/img_view_visibility" />

            <!-- HELP -->
            <View
                android:id="@+id/img_view_help"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="48dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/circle_icons_purple"
                app:layout_constraintEnd_toStartOf="@id/img_view_protection"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/img_help"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/ic_help"
                app:layout_constraintBottom_toBottomOf="@id/img_view_help"
                app:layout_constraintEnd_toEndOf="@id/img_view_help"
                app:layout_constraintStart_toStartOf="@id/img_view_help"
                app:layout_constraintTop_toTopOf="@id/img_view_help" />

            <!-- PROTECTION -->
            <View
                android:id="@+id/img_view_protection"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="48dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/circle_icons_purple"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/img_protection"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/ic_protection"
                app:layout_constraintBottom_toBottomOf="@id/img_view_protection"
                app:layout_constraintEnd_toEndOf="@id/img_view_protection"
                app:layout_constraintStart_toStartOf="@id/img_view_protection"
                app:layout_constraintTop_toTopOf="@id/img_view_protection" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <!-- CONTAINER -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_container"
            android:orientation="vertical"
            android:padding="20dp">

            <!-- BALANCE -->
            <Button
                android:id="@+id/btn_balance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:drawableEnd="@drawable/arrow_forward"
                android:drawablePadding="8dp"
                android:elevation="0dp"
                android:gravity="center_vertical"
                android:text="@string/account_balance"
                android:textColor="@color/text_primary"
                android:textSize="20sp"
                android:textStyle="bold" />

            <!-- SERVICES -->
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_payments"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:nestedScrollingEnabled="false" />

            <!-- GIFT CARDS -->
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_gift_cards"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:nestedScrollingEnabled="false" />

            <!-- CREDIT CARD -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:background="@drawable/bg_border"
                android:orientation="vertical"
                android:padding="20dp">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:drawableEnd="@drawable/arrow_forward"
                    android:drawablePadding="8dp"
                    android:elevation="0dp"
                    android:gravity="center_vertical"
                    android:text="@string/credit_card"
                    android:textColor="@color/text_primary"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/current_invoice"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:fontFamily="sans-serif"
                    android:includeFontPadding="false"
                    android:text="@string/invoice_value"
                    android:textSize="28sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/Available_limit"
                    android:textSize="14sp" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>